--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_DB_URI =mongodb+srv://ghulamyaseen:374773473747@cluster1.fraszvd.mongodb.net/daruliftadata
+MONGO_DB_URI =
 PORT = 5000
 SERVICE="ghulamyaseen67670@gmail.com"
 PASS="bdea jvnb cfwn avqt"
